<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="10dp"
        android:textSize="48sp"
        android:gravity="end|top"
        android:textColor="@color/greenBtnText"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnClr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/lightGreenBtnBg"
            android:onClick="onClear"
            android:text="@string/clr"
            android:textColor="@color/redBtnText"
            android:textSize="30sp"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="100dp"
            tools:ignore="NestedWeights,UsingOnClickInXml"
            />

        <Button
            android:id="@+id/btnKus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/lightGreenBtnBg"
            android:onClick="onDelete"
            android:text="@string/del"
            android:textColor="@color/brownBtnText"
            android:textSize="20sp"
            app:cornerRadius="100dp"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            tools:ignore="UsingOnClickInXml"
            />

        <Button
            android:id="@+id/btnPercent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/lightGreenBtnBg"
            android:onClick="onPercent"
            android:text="@string/percent"
            android:textColor="@color/brownBtnText"
            android:textSize="30sp"
            app:cornerRadius="100dp"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            tools:ignore="UsingOnClickInXml"
            />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/lightGreenBtnBg"
            android:onClick="onOperator"
            android:text="@string/divide"
            android:textColor="@color/brownBtnText"
            android:textSize="30sp"
            app:cornerRadius="100dp"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            tools:ignore="UsingOnClickInXml"
            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:onClick="onDigit"
            android:text="@string/_7"
            android:backgroundTint="@color/lightGreenBtnBg"
            android:textColor="@color/greenBtnText"
            android:textSize="30sp"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            app:cornerRadius="100dp"
            tools:ignore="NestedWeights,UsingOnClickInXml"
            />


        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:onClick="onDigit"
            android:text="@string/_8"
            android:backgroundTint="@color/lightGreenBtnBg"
            android:textColor="@color/greenBtnText"
            android:textSize="30sp"
            app:cornerRadius="100dp"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            tools:ignore="UsingOnClickInXml"
            />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:onClick="onDigit"
            android:text="@string/_9"
            android:backgroundTint="@color/lightGreenBtnBg"
            android:textColor="@color/greenBtnText"
            android:textSize="30sp"
            app:cornerRadius="100dp"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            tools:ignore="UsingOnClickInXml"
            />


        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/lightGreenBtnBg"
            android:onClick="onOperator"
            android:text="@string/multiply"
            android:textColor="@color/brownBtnText"
            android:textSize="30sp"
            app:cornerRadius="100dp"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            tools:ignore="UsingOnClickInXml"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:onClick="onDigit"
            android:text="@string/_4"
            android:backgroundTint="@color/lightGreenBtnBg"
            android:textColor="@color/greenBtnText"
            android:textSize="30sp"
            app:cornerRadius="100dp"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            tools:ignore="NestedWeights,UsingOnClickInXml"
            />

        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:onClick="onDigit"
            android:text="@string/_5"
            android:backgroundTint="@color/lightGreenBtnBg"
            android:textColor="@color/greenBtnText"
            android:textSize="30sp"
            app:cornerRadius="100dp"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            tools:ignore="UsingOnClickInXml"
            />

        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:onClick="onDigit"
            android:text="@string/_6"
            android:backgroundTint="@color/lightGreenBtnBg"
            android:textColor="@color/greenBtnText"
            android:textSize="30sp"
            app:cornerRadius="100dp"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            tools:ignore="UsingOnClickInXml"
            />


        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/lightGreenBtnBg"
            android:onClick="onOperator"
            android:text="@string/minus"
            android:textColor="@color/brownBtnText"
            android:textSize="30sp"
            app:cornerRadius="100dp"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            tools:ignore="UsingOnClickInXml"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:onClick="onDigit"
            android:text="@string/_1"
            android:backgroundTint="@color/lightGreenBtnBg"
            android:textColor="@color/greenBtnText"
            android:textSize="30sp"
            app:cornerRadius="100dp"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            tools:ignore="NestedWeights,UsingOnClickInXml"
            />

        <Button
            android:id="@+id/btnTow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:onClick="onDigit"
            android:text="@string/_2"
            android:backgroundTint="@color/lightGreenBtnBg"
            android:textColor="@color/greenBtnText"
            android:textSize="30sp"
            app:cornerRadius="100dp"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            tools:ignore="UsingOnClickInXml"
            />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:onClick="onDigit"
            android:text="@string/_3"
            android:backgroundTint="@color/lightGreenBtnBg"
            android:textColor="@color/greenBtnText"
            android:textSize="30sp"
            app:cornerRadius="100dp"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            tools:ignore="UsingOnClickInXml"
            />


        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/lightGreenBtnBg"
            android:onClick="onOperator"
            android:text="@string/add"
            android:textColor="@color/brownBtnText"
            android:textSize="30sp"
            app:cornerRadius="100dp"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            tools:ignore="UsingOnClickInXml"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnPlusMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:onClick="onPlusMinus"
            android:text="@string/plusMinus"
            android:backgroundTint="@color/lightGreenBtnBg"
            android:textColor="@color/greenBtnText"
            android:textSize="20sp"
            app:cornerRadius="100dp"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            tools:ignore="NestedWeights,UsingOnClickInXml"
            />

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:onClick="onZero"
            android:text="@string/_0"
            android:backgroundTint="@color/lightGreenBtnBg"
            android:textColor="@color/greenBtnText"
            android:textSize="30sp"
            app:cornerRadius="100dp"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            tools:ignore="UsingOnClickInXml"
            />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:onClick="onDot"
            android:text="@string/dot"
            android:backgroundTint="@color/lightGreenBtnBg"
            android:textColor="@color/greenBtnText"
            android:textSize="30sp"
            app:cornerRadius="100dp"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            tools:ignore="UsingOnClickInXml"
            />

        <Button
            android:id="@+id/btnEquals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:backgroundTint="@color/brownBtnText"
            android:onClick="onEquals"
            android:text="@string/equals"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:cornerRadius="100dp"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            tools:ignore="UsingOnClickInXml"
            />

    </LinearLayout>



</LinearLayout>